# drgrep

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  crates.js  help.html  index.html  package.json  poem.txt  search-index.js  settings.html  src-files.js
.github/: FUNDING.yml
.github/workflows/: CI.yml  build_release.yml  generate-release-notes.yml  publish_gh_pages.yml  rust_build.yml  rust_test.yml
drgrep/: all.html  fn.can_read_to_utf8.html  fn.read_stdin.html  fn.run.html  fn.search_insensitive_case.html  fn.search_sensitive_case.html  fn.search_with_regex.html  fn.search_word_insensitive_case.html  fn.search_word_sensitive_case.html  index.html  macro.print_colored!.html  macro.print_colored.html  macro.print_partial_colored!.html  macro.print_partial_colored.html  macro.print_styled!.html  macro.print_styled.html  sidebar-items.js  static.DEFAULT_MESSAGE.html  static.VERSION.html  struct.Config.html  struct.LinesInfo.html  struct.SearchResult.html
drgrep/args/: index.html
drgrep/color/: index.html  sidebar-items.js
drgrep/glob/: enum.Component.html  index.html  sidebar-items.js  struct.GlobPattern.html
drgrep/regex/: index.html  sidebar-items.js
drgrep/temp_dir/: fn.create_temp_dir.html  index.html  sidebar-items.js  struct.TempDir.html
drgrep/utilities/: fn.can_read_to_utf8.html  fn.read_stdin.html  fn.visit_dirs.html  index.html  sidebar-items.js  struct.GitIgnoreFiles.html
src/: glob.rs  lib.rs  main.rs  temp_dir.rs
tests/: colors_tests.rs  glob_tests.rs  integration_tests.rs  pattern_tests.rs  printer_tests.rs
(+59 files in other folders)
