[package]
name = "drgrep"
version = "0.2.2"
edition = "2021"
license-file = "LICENSE"
description = "A Rust implementation of the grep software with more support and features for args, workspace scanning and CLI"
readme = "README.md"
homepage = "https://donilite.github.io/drgrep/"
repository = "https://github.com/DoniLite/drgrep"
keywords = ["CLI", "grep", "crate"]
categories = ["command-line-utilities", "command-line-interface"]
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]

# Définition du binaire (exécutable)
[[bin]]
name = "drgrep"
path = "src/main.rs"

# Définition de la bibliothèque (crate)
[lib]
name = "drgrep"
path = "src/lib.rs"

[dependencies]
regex = "1.11.1"
